--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -1,6 +1,6 @@
 {
   "lang": "zh",
-  "start": "开始游戏",
+  "start": "Hura！开始游戏",
   "normal": "普通模式",
   "endless": "无尽模式",
   "practice": "练习模式",
@@ -31,11 +31,11 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
-  "text-level-5": "人?",
+  "text-level-1": "Müll（垃圾）",
+  "text-level-2": "normal（正常）",
+  "text-level-3": "heftig（厉害）",
+  "text-level-4": "verdammt toll（牛逼）",
+  "text-level-5": "OkamiCity in Italy（大神）",
   "time-over": "倒计时多了",
   "rank-title": "吃掉小鹿乃-排行榜",
   "query-record": "查询记录",
